<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2014 Simon Norberg

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">DMach</string>
    <string name="logo">DMACH</string>
    <string name="none"></string>
    <string name="tempo">BPM:</string>
    <string name="swing">Swing:</string>
    <string name="progress_bar">Progress bar</string>
    <string name="channel_bd">BD</string>
    <string name="channel_sd">SD</string>
    <string name="channel_cp">CP</string>
    <string name="channel_tt">TT</string>
    <string name="channel_cb">CB</string>
    <string name="channel_hh">HH</string>
    <string name="setting_1">1</string>
    <string name="setting_2">2</string>
    <string name="setting_3">3</string>
    <string name="setting_4">4</string>
    <string name="setting_5">5</string>
    <string name="setting_6">6</string>
    <string name="save">Save current patch</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="tempo_header">BPM</string>
    <string name="title_header">Title</string>
    <string name="notices">Notices</string>
    <string name="dmach_header"><a href="https://github.com/simonnorberg/dmach">DMach</a></string>
    <string name="dmach_author">Copyright &#169; 2014 Simon Norberg</string>
    <string name="cyclone_header"><a href="http://suita.chopin.edu.pl/~czaja/miXed/externs/cyclone.html">Cyclone</a></string>
    <string name="cyclone_author">This software is copyrighted by Miller Puckette and others. The following terms apply to all files associated with the software unless explicitly disclaimed in individual files.\n\nThe authors hereby grant permission to use, copy, modify, distribute, and license this software and its documentation for any purpose, provided that existing copyright notices are retained in all copies and that this notice is included verbatim in any distributions. No written agreement, license, or royalty fee is required for any of the authorized uses. Modifications to this software may be copyrighted by their authors and need not follow the licensing terms described here, provided that the new terms are clearly indicated on the first page of each file where they apply.\n\nIN NO EVENT SHALL THE AUTHORS OR DISTRIBUTORS BE LIABLE TO ANY PARTY FOR DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OF THIS SOFTWARE, ITS DOCUMENTATION, OR ANY DERIVATIVES THEREOF, EVEN IF THE AUTHORS HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nTHE AUTHORS AND DISTRIBUTORS SPECIFICALLY DISCLAIM ANY WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON–INFRINGEMENT. THIS SOFTWARE IS PROVIDED ON AN \"AS IS\" BASIS, AND THE AUTHORS AND DISTRIBUTORS HAVE NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS.\n\nRESTRICTED RIGHTS: Use, duplication or disclosure by the government is subject to the restrictions as set forth in subparagraph \(c\) (1) (ii) of the Rights in Technical Data and Computer Software Clause as DFARS 252.227–7013 and FAR 52.227–19.</string>
    <string name="icomoon_header"><a href="http://icomoon.io">IcoMoon</a></string>
    <string name="diy2_header"><a href="http://forum.pdpatchrepo.info/topic/1877/diy2-effects-sample-players-synths-and-sound-synthesis">DIY2 library</a></string>
    <string name="diy2_author">Created by Matt Davey</string>
    <string name="gson_header"><a href="https://code.google.com/p/google-gson/">Gson</a></string>
    <string name="gson_author">Copyright &#169; 2008–2009 Google Inc.</string>
    <string name="hcs_header"><a href="http://puredata.info/downloads/hcs">Hcs</a></string>
    <string name="hcs_author">&#169; Copyright 2004 Hans-Christoph Steiner</string>
    <string name="libpd_header"><a href="http://libpd.cc/">libpd</a></string>
    <string name="libpd_author">This software is copyrighted by Miller Puckette and others. The following terms (the \"Standard Improved BSD License\") apply to all files associated with the software unless explicitly disclaimed in individual files:\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n3. The name of the author may not be used to endorse or promote products derived from this software without specific prior written permission.\n\nTHIS SOFTWARE IS PROVIDED BY THE AUTHOR \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="pan_header"><a href="http://puredata.info/downloads/pan">Pan</a></string>
    <string name="pan_author">&#169; Copyright 2004 Hans-Christoph Steiner</string>
    <string name="pdcore_header"><a href="https://github.com/libpd/pd-for-android">PdCore</a></string>
    <string name="pdcore_author">This software is copyrighted by Peter Brinkmann and others. The following terms (the \"Standard Improved BSD License\") apply to all files associated with the software unless explicitly disclaimed in individual files:\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n3. The name of the author may not be used to endorse or promote products derived from this software without specific prior written permission.\n\nTHIS SOFTWARE IS PROVIDED BY THE AUTHOR \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="saxmono_header"><a href="http://www.saxsoft.de/">saxMono</a></string>
    <string name="saxmono_author">s.a.x. Software License v1.00\n\nThis license can also be found at this permalink: http://www.fontsquirrel.com/license/saxMono\n\nYou may download this font, circulate it und use it freely. You may not alter rename, change copyrights or modify this font in any way.</string>
    <string name="zexy_header"><a href="http://puredata.info/downloads/zexy">Zexy</a></string>
    <string name="zexy_author">Copyright 1999–2011 IOhannes m zmoelnig\nCopyright 1999–2011 zexy–contributers\nCopyright 1998–2004 matt wright\nCopyright 1999–2000 winfried ritsch\nCopyright 1999 guenter geiger\nCopyright 1996–1999 miller s puckette\nCopyright 2005–2006 tim blechmann\nCopyright 2009–2010 franz zotter</string>
    <string name="license_gpl2">This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>
    <string name="license_gpl3">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see &lt;http://www.gnu.org/licenses/&gt;.</string>
    <string name="license_apache2">Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

</resources>
