<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2014 Simon Norberg

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/save_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/save_button"
        android:layout_alignBaseline="@+id/save_button"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:singleLine="true"
        android:maxLines="1"
        android:maxLength="30"
        android:hint="@string/title"
        android:inputType="text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:onClick="onSaveClicked" />

    <TextView
        android:id="@+id/title_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:paddingLeft="@dimen/margin_normal"
        android:layout_below="@+id/save_button"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/tempo_header"
        android:background="@color/holo_dark"
        android:text="@string/title_header"
        android:lines="1" />

    <TextView
        android:id="@+id/tempo_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:paddingRight="@dimen/margin_normal"
        android:layout_below="@+id/save_button"
        android:layout_alignParentRight="true"
        android:background="@color/holo_dark"
        android:text="@string/tempo_header"
        android:lines="1" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_header" />

</RelativeLayout>
